# MARTA

./: CMakeLists.txt  CppRTA.cpp  CppRTA.h  CppRTAtst.cpp  Install_CppRTA_RasPi.odt  MARTA.cpp  MARTA.h  MARTAtst.c  QtRTAtst.cpp  README.md  mainWindow.cpp  mainWindow.h
MATLAB/: MARTA.m  ThroughputExample.m  bandPass.m  deviceInfo.m  gain.m  genNoise.m  hiPass.m  loPass.m  playFromFileExample.m  recToFileExample.m
MATLAB/win32/: pFileGeneration.m  pMARTA.m
MATLAB/win64/: pFileGeneration.m  pMARTA.m
